--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: php
-
-sudo: false
+sudo: required
+services:
+ - mysql
+addons:
+ postgresql: "9.6"
+ apt:
+  packages:
+   - openjdk-8-jre-headless
 
 cache:
-  directories:
-    - $HOME/.composer/cache
-
+ directories:
+  - $HOME/.composer/cache
+  - $HOME/.npm
 php:
  - 7.2
 
@@ -18,14 +24,15 @@ env:
   - DB=mysqli
 
 before_install:
-  - phpenv config-rm xdebug.ini
-  - cd ../..
-  - composer selfupdate
-  - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
-  - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+ - phpenv config-rm xdebug.ini
+ - nvm install 14
+ - nvm use 14
+ - cd ../..
+ - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+ - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci install
+  - moodle-plugin-ci install --no-init
 
 script:
   - moodle-plugin-ci phplint
